Projet GL/test/src/test/deca/context/invalid/increment3/if-vide.deca
// Test if void

// Historique : cree le 23/01/2023

{
    //Must be refused
    if(){
        print("error");
    }
}